--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
-    <title>Suraj Agri</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
+    <title>Suraj Agri</title>
+    <link rel="stylesheet" href="index.css">    
 </head>
 <body>
     <nav>
-        <h3 id="navtext">Suraj</h3>
-         <ol id="navlist">
-          <button id="darkmode"><i class="fa-sharp fa-solid fa-moon"></i></button>
-            <a href="#"><li class="list" id="current">Home</li></a>
-            <a href="skills.html"><li class="list">Skills</li></a>
-            <a href="experience.html"><li class="list">Experience</li></a>
-            <a href="projects.html"><li class="list">Projects</li></a>
-            <a href="contact.html"><li class="list">Contact</li></a>
-        </ol>
+        <div class="name" >
+            <h2>Suraj</h2>
+        </div>
+        <ul id="ullist">
+            <div id="navList">
+            <li class="list" id="current"><a href="#">About</a></li>
+            <li class="list"><a href="skills.html">Skills</a></li>
+            <li class="list"><a href="experience.html">Experience</a></li>
+            <li class="list"><a href="projects.html">Projects</a></li>
+            <li class="list"><a href="contact.html">Contact</a></li>
+        </div>
+        </ul>
+        <button id="darkmode"><i class="fa-sharp fa-solid fa-moon"></i></button>
+        <div class="menu-icon">
+            <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+        </div>
     </nav><br><br>
-      
-<!--  -->
-<script src="index.js"></script>
+    
+    <!--  -->
+    <script src="index.js"></script>
 </body>
 </html>
