--- a/index.html
+++ b/index.html
@@ -27,7 +27,22 @@
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav><br><br>
-    
+    <div class="prfimg">
+        <img src="images/OIP (1)_Edited.png" alt="">
+    </div>  
+    <div class="text">
+        <div class="text1">
+            <h3>Hello, I'm,</h3>
+            <h2> Suraj Agri,</h2><br><br>
+            <h1>Full Stack Web Developer</h1>
+        </div>
+              
+</div>
+<!-- <div class="about">
+    <h3>About Me</h3><br>
+    <pre>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js. With a range of projects 
+under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</pre>
+</div> -->
     <!--  -->
     <script src="index.js"></script>
 </body>
