--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </div>
               
 </div>
-<!-- <div class="about">
+<div class="about">
     <h3>About Me</h3><br>
-    <pre>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js. With a range of projects 
-under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</pre>
-</div> -->
+    <p>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js.</p>
+    <p>With a range of projects under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</p>
+</div>
     <!--  -->
     <script src="index.js"></script>
 </body>
