--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </div>
 <div class="about">
     <h3>About Me</h3><br>
-    <p>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js.</p>
-    <p>With a range of projects under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</p>
+    <p>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js.
+With a range of projects under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</p>
 </div>
     <!--  -->
     <script src="index.js"></script>
