--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=download" />
     <title>Suraj Agri</title>
     <link rel="stylesheet" href="index.css">    
 </head>
@@ -22,7 +23,7 @@
             <li class="list"><a href="contact.html">Contact</a></li>
         </div>
         </ul>
-        <button id="darkmode"><i class="fa-sharp fa-solid fa-moon"></i></button>
+        <button id="darkmode" onclick="theme"><i class="fa-sharp fa-solid fa-moon"></i></button>
         <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
@@ -36,7 +37,15 @@
             <h2> Suraj Agri,</h2><br><br>
             <h1>Full Stack Web Developer</h1>
         </div>
-              
+</div>
+<div class="buttons">
+<a href="pdf/Surajagri(CV).PDF" target="_blank"><button id="resume">Download CV <i class="fa-solid fa-download"></i></button></a>
+<div class="i">
+    <a href="https://www.linkedin.com/in/suraj-agri-69bab3253/"target="_blank"><button class="profile"><i class="fa-brands fa-linkedin"></i></button></a>
+    <a href="https://github.com/Surajagarwal09" target="_blank"><button class="profile"><i class="fa-brands fa-github"></i></button></a>
+    <a href="mailto:surajagarwal396@gmail.com" target="_blank"><button class="profile"><i class="fa-solid fa-envelope"></i></button></a>
+    <a href="https://www.instagram.com/suraj_agarwal.18.12/"target="_blank"><button class="profile"><i class="fa-brands fa-instagram"></i></button></a>
+</div>
 </div>
 <div class="about">
     <h3>About Me</h3><br>
