--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">    
+    <link rel="stylesheet" href="contact.css">    
 </head>
 </head>
 <body>
