--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
     <title>Suraj Agri</title>
-    <link rel="stylesheet" href="index.css">    
+    <link rel="stylesheet" href="experience.css">    
 </head>
 <body>
     <nav>
