--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=download" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Suraj Agri</title>
     <link rel="stylesheet" href="index.css">    
 </head>
@@ -16,8 +17,8 @@
         </div>
         <ul id="ullist">
             <div id="navList">
-            <li class="list" id="current"><a href="#">About</a></li>
-            <li class="list"><a href="skills.html">Skills</a></li>
+            <li class="list" id="current"><a href="#About">About</a></li>
+            <li class="list"><a href="#skills">Skills</a></li>
             <li class="list"><a href="experience.html">Experience</a></li>
             <li class="list"><a href="projects.html">Projects</a></li>
             <li class="list"><a href="contact.html">Contact</a></li>
@@ -28,6 +29,7 @@
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav><br><br>
+    <section id="About">
     <div class="prfimg">
         <img src="images/OIP (1)_Edited.png" alt="">
     </div>  
@@ -48,11 +50,49 @@
 </div>
 </div>
 <div class="about">
-    <h3>About Me</h3><br>
+    <h3>About Me</h3>
     <p>I am a fresher full-stack developer,skilled in front-end techs like HTML, CSS, and JavaScript, and back-end tools like Node.js.
 With a range of projects under my belt, from dynamic websites to RESTful APIs, I am ready to bring My problem-solving skills and continuous learning mindset to any team.</p>
 </div>
-    <!--  -->
-    <script src="index.js"></script>
+</section><br>
+    <section id="skills">
+    <h3 class="skilheader">Skills</h3><br>
+    <div class="container text-center">
+        <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+          <div class="col">
+            <div class="p-3">HTML 5</div>
+          </div>
+          <div class="col">
+            <div class="p-3"> CSS3</div>
+          </div>
+          <div class="col">
+            <div class="p-3">JavaScript</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Bootstrap</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Git</div>
+          </div>
+          <div class="col">
+            <div class="p-3"> Mongo DB</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Express js</div>
+          </div>
+          <div class="col">
+            <div class="p-3">React js</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Node js</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Power Bi</div>
+          </div>
+        </div>
+      </div>
+</section>
+<!--  -->
+<script src="index.js"></script>
 </body>
 </html>
