--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Suraj Agri</title>
     <link rel="stylesheet" href="experience.css">    
 </head>
@@ -16,7 +18,7 @@
         <ul id="ullist">
             <div id="navList">
             <li class="list"><a href="index.html">About</a></li>
-            <li class="list"><a href="skills.html">Skills</a></li>
+            <li class="list"><a href="index.html#skills">Skills</a></li>
             <li class="list" id="current"><a href="#">Experience</a></li>
             <li class="list"><a href="projects.html">Projects</a></li>
             <li class="list"><a href="contact.html">Contact</a></li>
@@ -27,7 +29,35 @@
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav><br><br>
-      
+    <div class="container">
+        <div class="content left-container">
+            <div class="text">
+                <h3>Experience:</h3>
+                <p>Internship at PygenicArc Developed and implemented various projects, gaining hands-on experience in [mention any specific tasks or tools].</p>
+            </div>
+        </div>
+        <div class="content right-container">
+            <div class="text">
+                <h3>Certifications:</h3>
+                <ul class="ul">
+                    <li>Hyperlaunch in MERN Stack: Gained expertise in MongoDB, Express.js, React, and Node.js.</li>
+                    <li>CVESD in Front End: Acquired skills in front-end development, focusing on [mention any key areas or technologies].</li>
+                </ul>
+            </div>
+        </div>
+        <div class="content left-container">
+            <div class="text">
+                <h3>Projects:</h3>
+                <ul class="ul">
+                    <li>Melody Flow: Built a music streaming app with [HTML5, CSS3, JavaScript], enhancing user experience through [Artist Details, top 5 songs, Song Info].</li>
+                    <li>Clock App: Created a functional clock application using [HTML5, CSS3, JavaScript], focusing on [clock and Stopwatch].</li>
+                    <li>Figma Design: Created interactive design prototypes for various projects, improving the UI/UX design process.</li>
+                </ul>
+            </div>
+        </div>
+        <span class="leftline"></span>
+    </div>    
+    
 <!--  -->
 <script src="index.js"></script>
 </body>
