--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <ul id="ullist">
             <div id="navList">
-            <li class="list" id="current"><a href="#About">About</a></li>
+            <li class="list" id="current"><a href="#">About</a></li>
             <li class="list"><a href="#skills">Skills</a></li>
             <li class="list"><a href="experience.html">Experience</a></li>
             <li class="list"><a href="projects.html">Projects</a></li>
