--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/OIP_Edited.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Suraj Agri</title>
     <link rel="stylesheet" href="projects.css">    
 </head>
@@ -16,7 +18,7 @@
         <ul id="ullist">
             <div id="navList">
             <li class="list"><a href="index.html">About</a></li>
-            <li class="list"><a href="skills.html">Skills</a></li>
+            <li class="list"><a href="index.html#skills">Skills</a></li>
             <li class="list"><a href="experience.html">Experience</a></li>
             <li class="list" id="current"><a href="#">Projects</a></li>
             <li class="list"><a href="contact.html">Contact</a></li>
