--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <ul id="ullist">
             <div id="navList">
             <li class="list"><a href="index.html">About</a></li>
-            <li class="list"><a href="skills.html">Skills</a></li>
+            <li class="list"><a href="index.html#skills">Skills</a></li>
             <li class="list"><a href="experience.html">Experience</a></li>
             <li class="list"><a href="projects.html">Projects</a></li>
             <li class="list" id="current"><a href="#">Contact</a></li>
