--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,49 @@
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav><br><br>
-
+    <div class="container">
+    <div class="contents">
+        <div class="image">
+            <a href="https://surajagarwal09.github.io/Clock-App/" target="_blank"><img src="images/worlclock.png" alt=""></a>
+        </div>
+        <div class="text">
+            <h2>Clock</h2>
+            <h5>Deployed: HTML5,CSS3,JS.</h5>
+            <ul class="items">
+                <li>Displays current time and date accurately, synced with system settings for precise regional formatting.</li>
+                <li>Automatically adjusts to the user's region and time zone, ensuring accurate local time.</li>
+                <li>Offers a user-friendly stopwatch to measure elapsed time for various activities.</li>
+            </ul>
+        </div>
+    </div>
+    <div class="contents">
+        <div class="image">
+            <a href="https://surajagarwal09.github.io/Figma-Design/" target="_blank"><img src="images/figmadesign.png" alt=""></a>
+        </div>
+        <div class="text">
+            <h2>Figma Design</h2>
+            <h5>Deployed: HTML5,CSS3,JS.</h5>
+            <ul class="items">
+                <li>Design interactive components like buttons, menus, and forms. Use Figma's prototyping features to simulate user interactions, ensuring a smooth and engaging experience.</li>
+                <li> Plan for responsiveness from the start. Create breakpoints for different screen sizes to ensure your website looks great on any device.</li>
+            </ul>
+        </div>
+    </div>
+    <div class="contents">
+        <div class="image">
+           <a href="https://surajagarwal09.github.io/Melody-flow/" target="_blank"> <img src="images/melodyflow.png" alt=""></a>
+        </div>
+        <div class="text">
+            <h2>Melody Flow</h2>
+            <h5>Deployed: HTML5,CSS3,JS.</h5>
+            <ul class="items">
+                <li>Artist Profiles: Interactive and detailed, showcasing famous artists.</li>
+                <li>Song Details & Playback: Comprehensive info with seamless playback.</li>
+                <li>Top 5 Songs: Highlighting each artist's top tracks.</li>
+            </ul>
+        </div>
+    </div>
+</div>
     <!--  -->
     <script src="index.js"></script>
 </body>
