--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,24 @@
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav><br><br>
-    
-      
+    <h1 class="head">Get In Touch</h1><br>
+    <div class="content">
+    <form action="">
+        <label for="name">Name</label><br>
+        <input type="text" id="name" placeholder="Name" name="name:"> <br>
+        <label for="email">Email</label><br>
+        <input type="email" id="email" placeholder="Email" name="email:"><br> 
+        <label for="phone">Phone No</label><br>
+        <input type="number" id="phone" placeholder="Phone No" name="phone no:">  <br>
+        <label for="">Subject</label><br>
+        <input type="text" id="name" placeholder="Subject" name="Subject:">  <br>
+        <label for="message">Message</label><br>
+        <textarea id="message" placeholder="MESSAGE..." name="Message:" ></textarea><br>
+        <div class="sent">
+        <button id="Send" onclick="send()">Send <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    </form>
+</div>
 <!--  -->
     <script src="index.js"></script>
 </body>
