--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/1dc0eb075f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <title>Suraj Agri</title>
     <link rel="stylesheet" href="contact.css">    
 </head>
@@ -32,23 +33,23 @@
     </nav><br><br>
     <h1 class="head">Get In Touch</h1><br>
     <div class="content">
-    <form action="">
-        <label for="name">Name</label><br>
-        <input type="text" id="name" placeholder="Name" name="name:"> <br>
-        <label for="email">Email</label><br>
-        <input type="email" id="email" placeholder="Email" name="email:"><br> 
-        <label for="phone">Phone No</label><br>
-        <input type="number" id="phone" placeholder="Phone No" name="phone no:">  <br>
-        <label for="">Subject</label><br>
-        <input type="text" id="name" placeholder="Subject" name="Subject:">  <br>
-        <label for="message">Message</label><br>
-        <textarea id="message" placeholder="MESSAGE..." name="Message:" ></textarea><br>
-        <div class="sent">
-        <button id="Send" onclick="send()">Send <i class="fa-solid fa-arrow-right"></i></button>
-    </div>
-    </form>
+        <form id="contact-form">
+            <label for="name">Name</label><br>
+            <input type="text" id="name" placeholder="Name" name="name"> <br>
+            <label for="email">Email</label><br>
+            <input type="email" id="email" placeholder="Email" name="email"><br>
+            <label for="phone">Phone No</label><br>
+            <input type="number" id="phone" placeholder="Phone No" name="phone"><br>
+            <label for="subject">Subject</label><br>
+            <input type="text" id="subject" placeholder="Subject" name="subject"><br>
+            <label for="message">Message</label><br>
+            <textarea id="message" placeholder="MESSAGE..." name="message"></textarea><br>
+            <div class="sent">
+                <button type="button" id="send-button">Send <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </form>        
 </div>
 <!--  -->
-    <script src="index.js"></script>
+    <script src="contatc.js"></script>
 </body>
 </html>
