--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 </div>
 <div class="buttons">
-<a href="pdf/Surajagri(CV).PDF" target="_blank"><button id="resume">Download CV <i class="fa-solid fa-download"></i></button></a>
+<a href="pdf/suraj agri .pdf" target="_blank"><button id="resume">Download CV <i class="fa-solid fa-download"></i></button></a>
 <div class="i">
     <a href="https://www.linkedin.com/in/suraj-agri-69bab3253/"target="_blank"><button class="profile"><i class="fa-brands fa-linkedin"></i></button></a>
     <a href="https://github.com/Surajagarwal09" target="_blank"><button class="profile"><i class="fa-brands fa-github"></i></button></a>
